# microlind-fw

./: .gitignore  README.md  srec.ihex
PS2-Controller/: CMakeLists.txt  README.md  fuses.conf  reed.bin.fuses.conf  test_read.hex.fuses.conf
PS2-Controller/scripts/: attach.ps1
PS2-Controller/src/: controller.c
address-logic/: ADDRESS-LOGIC_CUPL.doc  ADDRESS-LOGIC_CUPL.lst  ADDRESS-LOGIC_CUPL.mx  ADDRESS-LOGIC_CUPL.pla  ADDRESS-LOGIC_CUPL.sim  address-logic.pld
address-logic/stage1/: ADDRESS-LOGIC_CUPL.PLD  address-logic_1.pld
address-logic/stage2/: CUPL_ADDRESS-LOGIC_1.PLD  address-logic.chp  address-logic.fus  address-logic.pin  address-logic.pld
bios/: boot.asm  io.asm  serial.asm  serial_6552.asm  system_defines.asm  test.asm  test.ihex  text.asm
driver/: irq.asm  parallel_6522.asm  ps2.asm  serial_6552.asm
logic/address-logic/: ADDRESS-LOGIC_CUPL.PLD  ADDRESS-LOGIC_CUPL.abs  ADDRESS-LOGIC_CUPL.doc  ADDRESS-LOGIC_CUPL.jed  ADDRESS-LOGIC_CUPL.lst  ADDRESS-LOGIC_CUPL.mx  ADDRESS-LOGIC_CUPL.pla  ADDRESS-LOGIC_CUPL.sim  Address-Logic.jed  CB786642  address-logic.pld
logic/irq-logic/: IRQ-LOGIC_CUPL.PLD  irq-logic.dig  irq-logic.vhdl  irq-logic_chip.dig
logic/irq-logic/CUPL_irq-logic/: CUPL.PLD
logic/mem_logic/: MEM-LOGIC.PLD
logic/signal-logic/: Address-Logic.jed  CB264052  CB526020  CB853742  CM853742  SIGNAL-LOGIC_CUPL.abs  SIGNAL-LOGIC_CUPL.doc  SIGNAL-LOGIC_CUPL.lst  SIGNAL-LOGIC_CUPL.mx  SIGNAL-LOGIC_CUPL.pla  SIGNAL-LOGIC_CUPL.sim  Signal-Logic.jed  signal-logic.pld
logic/tests/: test.pld
logic/tests/address_test/: address_test.ino
proto/irq-logic/: IRQ-LOGIC_CUPL.PLD  irq-logic.dig  irq-logic.vhdl  irq-logic_chip.dig
proto/irq-logic/CUPL_irq-logic/: CUPL.PLD
proto/tests/: test.pld
proto/tests/address_test/: address_test.ino
ps2-controller/: CMakeLists.txt
ps2-controller/src/: controller.c
signal-logic/: Address-Logic.jed  SIGNAL-LOGIC_CUPL.doc  SIGNAL-LOGIC_CUPL.lst  SIGNAL-LOGIC_CUPL.pla  SIGNAL-LOGIC_CUPL.sim  Signal-Logic.jed  signal-logic.pld
signal-logic/stage1/: SIGNAL-LOGIC_cupl.PLD  signal-logic.pld
srec/: srec.asm
